# fastapi-rabbitmq

./: LICENSE  README.md  pyproject.toml
src/fastapi_rabbitmq/: app.py  asyncio_helpers.py  config.py  constants.py  consumer.py  logger.py  main.py  messages.py  producer.py
tests/: conftest.py  test_api.py  test_producer.py
